# swir-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_local  README.md  build.sh  demo_deployment.yaml  make_release.sh
configs/swir/: demo-config.yaml
graphics/: swir_logo_operator.xcf
src/: main.rs  main.rs~
swir-ns/: processor1
