[package]
name = "swir-operator"
version = "0.3.2"
authors = ["Dawid Nowak <nowakd@gmail.com>"]
repository = "https://github.com/swir-rs/swir-operator"
readme = "README.md"
license = "Apache-2.0"
description = "SWIR K8s operator"
keywords = ["sidecar", "rest", "messaging","cloudcomputing","kafka","nats","grpc"]
categories = ["sidecar","kubernetes","swir","cloudcomputing","k8s"]
edition = "2018"
publish = false

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "kube/native-tls", "kube-runtime/native-tls"]


[[bin]]
name = "swir-operator"
test = false
bench = false
path = "src/main.rs"

[dependencies]	
kube= {version = "^0.42.0", default-features = false, features = ["derive"] }
kube-runtime = { version = "^0.42.0", default-features = false }
k8s-openapi = { version = "0.9.0", features = ["v1_18"], default-features = false }
snafu = { version = "0.6", features = ["futures"] }
reqwest = { version = "0.10", default-features = false, features = ["json", "gzip", "stream","blocking"] }
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
env_logger = "0.7"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"







